# ArtFlow

./: .gitignore  README.md  main.py  pyproject.toml
ablation/: ablation_layers.py  ablation_manifest.json  ablation_run_index.jsonl  export_ablation_for_acc.py  run_ablation_dataset.py  run_cluster_match_acc.py  run_step5_model_replacement_baseline20.sh
cluster_match/: .gitignore  README.md  analyze_cluster_match_results.py  cal_cluster_match.sh  download_and_compress_images.py  evaluate_cluster_match_results.py  gt_52.jsonl  gt_52_cleaned.jsonl  run_cluster_match.py  run_cluster_match.sh  run_cluster_match_pipeline.py  test_cluster_match.sh  术语表.csv
eval_v1/: README.md  pyproject.toml  run_textscore.py
eval_v1/artifacts/: result.json  view.html
eval_v1/tests/: test_textscore.py
eval_v1/textscore/: __init__.py  analyzer.py  baseline.txt  enhanced.txt  evaluation.sh  models.py  render.py  sentence_indexer.py
eval_v1/textscore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eval_v2/: run_eval_v2.py
explor_converg_eval/: .gitignore  check_env.py  (+16 more)
final_version/eval_v2/: README.md  TECHNICAL_REPORT.md  pyproject.toml  test_models.py
final_version/eval_v2/guohua_eval/: analyzer.py  sentence_indexer.py
final_version/eval_v2/inputs/: context_baseline.txt  context_enhanced.txt  image_context_v.txt  slots.txt
preception_layer_1/: README.md  TECHNICAL_REPORT.md  context.md  pyproject.toml  test_embedding_model.py
preception_layer_1/perception_layer/: cli.py  clients.py  config.py  downstream.py  pipeline.py
preception_layer_1/tests/: test_pipeline.py
(+161 files in other folders)
