[project]
name = "textscore"
version = "0.1.0"
description = "A TextGrad-inspired scoring-only experiment for long-context comparison."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["textscore"]
