[project]
name = "guohua-eval-v2"
version = "0.1.0"
description = "Long-context comparison pipeline for Chinese painting commentary evaluation."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guohua_eval"]
